--- a/core/templates/account/signup.html
+++ b/core/templates/account/signup.html
@@ -1,4 +1,5 @@
 {% extends "core/base.html" %}
+{% load socialaccount %} 
 
 {% block content %}
 <div class="flex items-center justify-center min-h-screen bg-gray-100">
@@ -74,7 +75,7 @@
                 </div>
             </div>
             <div class="mt-6">
-                {% comment %} <a href="{% url 'socialaccount_login' 'google' %}" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50"> {% endcomment %}
+                <a href="{% provider_login_url 'google' %}" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
                     <span class="sr-only">Sign up with Google</span>
                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 48 48">
                         <path fill="#4285F4" d="M24 9.5c3.9 0 6.9 1.6 9.1 3.7l6.9-6.9C35.9 2.5 30.2 0 24 0 14.5 0 6.5 5.5 2.8 13.4l8.4 6.5c1.8-5.4 6.6-9.4 12.8-9.4z"></path>
